src/test/ui/error-codes/E0624.stderr
error[E0624]: associated function `method` is private
  --> $DIR/E0624.rs:11:9
   |
LL |         fn method(&self) {}
   |         ---------------- private associated function defined here
...
LL |     foo.method();
   |         ^^^^^^ private associated function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
